--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  background-color: #000A05;
+  background-color: #172928;
   color: bisque
 }
 
@@ -8,7 +8,7 @@
   border-radius: 10px;
 }
 ::-webkit-scrollbar {
- background-color: #001E0E;
+ background-color: #324141;
  border-radius: 10px;
 }
 
@@ -20,3 +20,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
